refactor: fixing code smells